# django-hello-world

./: .env.example.sh  .flake8  .gitignore  .gitlab-ci.yml  .pep8  .travis.yml  MANIFEST.in  Pipfile  README.md  README.rst  dev_requirements.txt  initial.json  initial_data.json  manage.py  pylintrc  pyproject.toml  renovate.json  requirements.dev.txt  requirements.hs.txt  requirements.prd.txt  requirements.txt  settings.py  settings_local.py.example  setup.cfg  setup.py  wsgi.py
.gitlab-ci/: docker-compose.yml  export.sh  make-packages.sh  make-venv.sh  make-wheels.sh  merge.sh  tag.sh  test-app.sh  test-packages.sh  test-wheels.sh
.gitlab-ci/before/: apt.sh  environ.sh  git.sh  libxml2.sh  pipenv.sh  pypy3.sh  python.sh  ssh-private-key.sh
.gitlab-ci/helpers/: git-clone.sh  run-linters.sh  test-in-docker-compose.sh
.travis/: install.sh  script.sh
django_hello_world/: __init__.py  manage.py  models.py  settings.py  urls.py  wsgi.py
django_hello_world/blog/: __init__.py  apps.py  models.py  urls.py  views.py
django_hello_world_blog/: __init__.py  admin.py  apps.py  views.py
hello_blog/: admin.py  forms.py  models.py  schema.py  search_indexes.py  urls.py  views.py
hello_world/: urls.py  views.py
project/: settings.py  settings_db.dev.example.py  settings_db.postgresql.example.py  settings_db.prd.example.py  settings_db.py.dev.example  settings_db.py.prd.example  settings_dirs.py.dev.example  settings_dirs.py.prd.example  settings_email.py.dev.example  settings_local.dev.example.py  settings_local.prd.example.py  settings_local.py.dev.example  settings_local.py.prd.example  settings_log.prd.example.py  settings_log.py.prd.example  settings_secret.py  settings_suit.py  urls.py  wsgi.py
requirements/: ci.txt  dev.txt  lint.txt  prd.txt
scripts/: packages.sh
(+20 files in other folders)
