[metadata]
name = django-hello-world
version = attr: django_hello_world.VERSION
author = Piotr Roszatycki
author_email = piotr.roszatycki@gmail.com
home_page = https://github.com/dex4er/django-hello-world
description = The template for Django applications
long_description = file: README.rst
license = LGPL
license_file = LICENSE
platform = OS Independent
keywords = django hello example
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Django

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    django-hello-world = django_hello_world.manage:main

[options.extras_require]
dev =
    docutils
    Pygments

[options.packages.find]
exclude =
    .git, .eggs, *.egg-info, .venv, __pycache__, tests/, docs/, build/, dist/

[bandit]
exclude = .venv
skips = B322

[check]
metadata = true
restructuredtext = true
strict = true

[doc8]
ignore-path = .git, .eggs, *.egg-info, .venv, __pycache__, tests/, docs/, build/, dist/

[flake8]
max-line-length = 300
exclude = .git, .eggs, *.egg-info, .venv, __pycache__, tests/, docs/, build/, dist/

[MASTER]
load-plugins = pylint_django

[pylint]
disable = duplicate-code, invalid-name, missing-docstring
min-public-methods = 0
max-line-length = 300
max-locals = 25
max-nested-blocks = 8
max-parents = 15
notes = FIXME, XXX

[tool:pytest]
DJANGO_SETTINGS_MODULE = django_hello_world.settings
python_files = tests.py
